--- a/agents-api/overview.mdx
+++ b/agents-api/overview.mdx
@@ -80,7 +80,7 @@ Agents API uses dedicated limiters:
     Payment methods, billing info, invoices, and wallet operations.
   </Card>
   <Card title="Subscriptions" href="/agents-api/subscriptions">
-    Create/update/cancel/pause/resume/reset subscriptions.
+    Discover plans, pay-as-you-go options, and create/update/cancel/pause/resume subscriptions.
   </Card>
   <Card title="Teams" href="/agents-api/teams">
     Team members, invites, and invitation acceptance.
