--- a/mcp-web-api/agent-cp-tools-reference.mdx
+++ b/mcp-web-api/agent-cp-tools-reference.mdx
@@ -454,10 +454,10 @@ Manage wallet balance, auto-recharge, and coupons. All actions require authentic
 
 ### agent-subscriptions
 
-Manage subscriptions. All actions require authentication.
+Manage subscriptions. All actions require authentication. Use `list-plans` first to discover available subscription plans and pay-as-you-go options.
 
 <ParamField path="action" type="string" required>
-  `list`, `create`, `update`, `cancel`, `pause`, `resume`, `reset-cycle`, `charge-amount`, `offer-cancelation`, `reverse-cancelation`, `fix-payment`
+  `list-plans`, `list`, `create`, `update`, `cancel`, `pause`, `resume`, `reset-cycle`, `charge-amount`, `offer-cancelation`, `reverse-cancelation`, `fix-payment`
 </ParamField>
 
 <ParamField path="subscription_id" type="integer">
