--- a/mcp-web-api/agent-control-plane.mdx
+++ b/mcp-web-api/agent-control-plane.mdx
@@ -79,7 +79,7 @@ The response includes an `access_token` to use for all subsequent requests.
 | `agent-models` | search, filters, tags, providers, detail | Discover 50,000+ AI models |
 | `agent-billing` | overview, payment-methods, add/set-default/remove-payment-method, billing-info, update-billing-info, invoices, invoice-detail, invoice-pdf | Billing and payment management |
 | `agent-wallet` | fund, auto-funding, disable-auto-funding, withdraw, validate-coupon, redeem-coupon | Wallet funding and coupon operations |
-| `agent-subscriptions` | list, create, update, cancel, pause, resume, reset-cycle, charge-amount, offer-cancelation, reverse-cancelation, fix-payment | Subscription lifecycle management |
+| `agent-subscriptions` | list, create, update, pause, resume, reset-cycle, charge-amount, fix-payment | Subscription lifecycle management |
 | `agent-teams` | list, create, get, update, delete, resend-invite, accept-invite | Team member and invite management |
 
 <Card title="View Complete Tools Reference" icon="book" href="/mcp-web-api/agent-cp-tools-reference">
