feat: remove indexing for the pages and make them hidden.
Signed-off-by: Anurag Kanade <75563673+anurag12-webster@users.noreply.github.com>

--- a/deepfake-api/fetch.mdx
+++ b/deepfake-api/fetch.mdx
@@ -2,6 +2,8 @@
 title: "Fetch Video"
 openapi : 'POST /deepfake/fetch/{id}'
 description: 'Fetch Queued Request API returns queued or generated videos, useful for delayed processing.'
+hidden: true
+noindex: true
 ---
 
 <Note>
