--- a/deepfake-api/multiple-face-swap.mdx
+++ b/deepfake-api/multiple-face-swap.mdx
@@ -2,6 +2,8 @@
 title: "Multiple Face Swap"
 openapi: 'POST /deepfake/multiple_face_swap'
 description: 'Swap all detected faces in a single image with faces from a target image.'
+hidden: true
+noindex: true
 ---
 
 ## Request
