--- a/deepfake-api/overview.mdx
+++ b/deepfake-api/overview.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Deepfake API"
 description: "Generate deepfake videos and images with face swapping. Supports single and multiple face swap, video face swap, and specific face targeting."
+hidden: true
+noindex: true
 ---
 
 <Warning>
