--- a/deepfake-api/single-video-swap.mdx
+++ b/deepfake-api/single-video-swap.mdx
@@ -2,6 +2,8 @@
 title: "Single Video Swap"
 openapi: 'POST /deepfake/single_video_swap'
 description: 'Swap all detected faces in a single video with faces from an input image.'
+hidden: true
+noindex: true
 ---
 
 ## Request
