--- a/deepfake-api/specific-face-swap.mdx
+++ b/deepfake-api/specific-face-swap.mdx
@@ -2,6 +2,8 @@
 title: "Specific Face Swap"
 openapi: 'POST /deepfake/single_face_swap'
 description: 'Swap faces in a single image by providing the initial image and the target image.'
+hidden: true
+noindex: true
 ---
 
 ## Request
