--- a/enterprise-api/deepfake/clear-queue.mdx
+++ b/enterprise-api/deepfake/clear-queue.mdx
@@ -2,6 +2,8 @@
 title: "Clear Queue"
 description: "This endpoint is used to clear the API's queue."
 openapi: "POST /deepfake/clear_queue"
+hidden: true
+noindex: true
 ---
 
 ## Request
