--- a/enterprise-api/deepfake/fetch.mdx
+++ b/enterprise-api/deepfake/fetch.mdx
@@ -2,6 +2,8 @@
 title: "Fetch Queued Video"
 description: "Fetch Queued Request API fetches queued request."
 openapi: "POST /deepfake/fetch"
+hidden: true
+noindex: true
 ---
 <Note>
     This endpoint does not generate new video, it returns already generated/queued videos.
