--- a/enterprise-api/deepfake/multiple-face-swap.mdx
+++ b/enterprise-api/deepfake/multiple-face-swap.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Multiple Face Swap"
 description: "Multiple Face Swap endpoint allows swapping faces in all detected faces within a single image."
+hidden: true
+noindex: true
 ---
 
 
