--- a/enterprise-api/deepfake/overview.mdx
+++ b/enterprise-api/deepfake/overview.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Enterprise Deepfake API"
 description: "Enterprise deepfake video generation on dedicated GPU servers. Face swapping with private infrastructure and full server control."
+hidden: true
+noindex: true
 ---
 
 <Tip>
