--- a/enterprise-api/deepfake/single-video-swap.mdx
+++ b/enterprise-api/deepfake/single-video-swap.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Single Video Swap"
 description: "Single Video Swap endpoint allows swapping faces in all detected faces within a single video."
+hidden: true
+noindex: true
 ---
 
 ## Request
