--- a/enterprise-api/deepfake/specific-face-swap.mdx
+++ b/enterprise-api/deepfake/specific-face-swap.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Specific Face Swap"
 description: "Specific Face Swap endpoint allows swapping faces in a single image."
+hidden: true
+noindex: true
 ---
 
 ## Request
