--- a/enterprise-api/deepfake/specific-video-swap.mdx
+++ b/enterprise-api/deepfake/specific-video-swap.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Specific Video Swap"
 description: "Specific Video Swap endpoint allows swapping specific faces according to reference face."
+hidden: true
+noindex: true
 ---
 
 ## Request
