--- a/enterprise-api/deepfake/system-details.mdx
+++ b/enterprise-api/deepfake/system-details.mdx
@@ -2,6 +2,8 @@
 title: "System Details"
 description: "This endpoint returns information about your server."
 openapi: "POST /deepfake/system_details"
+hidden: true
+noindex: true
 ---
 
 
