--- a/enterprise-api/deepfake/update-server.mdx
+++ b/enterprise-api/deepfake/update-server.mdx
@@ -2,6 +2,8 @@
 title: "Update Server"
 description: "This endpoint is used to update your dedicated server."
 openapi: "POST /deepfake/update_server"
+hidden: true
+noindex: true
 ---
 
 ## Request
