--- a/enterprise-api/deepseek-chat/restart-server.mdx
+++ b/enterprise-api/deepseek-chat/restart-server.mdx
@@ -2,6 +2,8 @@
 title: "Restart Server"
 description: "This endpoint is used to restart your dedicated server."
 openapi: "POST /deepseek_chat/restart_server"
+hidden: true
+noindex: true
 ---
 
 
