--- a/enterprise-api/deepseek-chat/start.mdx
+++ b/enterprise-api/deepseek-chat/start.mdx
@@ -2,6 +2,8 @@
 title: "Start Uncensored Chat"
 description: "Uncensored chat endpoint allows you to create chat conversation and get responses based on the conversation."
 openapi: "POST /deepseek_chat/start"
+hidden: true
+noindex: true
 ---
 
 ## Request
