--- a/enterprise-api/uncensored-chat/clear-cache.mdx
+++ b/enterprise-api/uncensored-chat/clear-cache.mdx
@@ -2,6 +2,8 @@
 title: "Clear Cache"
 description: "This endpoint is used to clear the API's cache."
 openapi: "POST /uncensored_chat/clear_cache"
+hidden: true
+noindex: true
 ---
 
 ## Request
