--- a/enterprise-api/uncensored-chat/overview.mdx
+++ b/enterprise-api/uncensored-chat/overview.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Enterprise Uncensored Chat API"
 description: "Enterprise uncensored chat AI on dedicated GPU servers. Run unrestricted language models with private infrastructure."
+hidden: true
+noindex: true
 ---
 
 ## Endpoints
