--- a/enterprise-api/uncensored-chat/restart-server.mdx
+++ b/enterprise-api/uncensored-chat/restart-server.mdx
@@ -2,6 +2,8 @@
 title: "Restart Server"
 description: "This endpoint is used to restart your dedicated uncensored chat server."
 openapi: "POST /uncensored_chat/restart_server"
+hidden: true
+noindex: true
 ---
 
 ## Request
