--- a/enterprise-api/uncensored-chat/start.mdx
+++ b/enterprise-api/uncensored-chat/start.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Start Uncensored Chat"
 description: "This endpoint is used to start a new uncensored chat conversation."
+hidden: true
+noindex: true
 ---
 
 ## Request
