--- a/uncensored-chat-api/chat-completions.mdx
+++ b/uncensored-chat-api/chat-completions.mdx
@@ -2,6 +2,8 @@
 title: "Chat Completions"
 openapi: 'POST /chat/completions'
 description: 'OpenAI-compatible API that allows you to create chat conversations and receive responses and also supports OpenAI SDKs. '
+hidden: true
+noindex: true
 ---
 
 ## Request
