--- a/uncensored-chat-api/overview.mdx
+++ b/uncensored-chat-api/overview.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Uncensored Chat API"
 description: "Build uncensored AI chat applications with ModelsLab's Chat API. Supports chat completions and uncensored conversation endpoints."
+hidden: true
+noindex: true
 ---
 
 ### Endpoints
