--- a/uncensored-chat-api/uncensored-chat.mdx
+++ b/uncensored-chat-api/uncensored-chat.mdx
@@ -2,6 +2,8 @@
 title: "Uncensored Chat"
 openapi: "POST /llm/uncensored_chat"
 description: "Create chat conversations and receive responses based on the conversation, without restrictions."
+hidden: true
+noindex: true
 ---
 
 ## Request
