--- a/deepfake-api/specific-video-swap.mdx
+++ b/deepfake-api/specific-video-swap.mdx
@@ -2,6 +2,8 @@
 title: "Specific Video Swap"
 openapi: 'POST /deepfake/specific_video_swap'
 description: 'Swapping specific faces in a video based on a reference image.'
+hidden: true
+noindex: true
 ---
 
 ## Request
