--- a/enterprise-api/deepseek-chat/overview.mdx
+++ b/enterprise-api/deepseek-chat/overview.mdx
@@ -1,6 +1,8 @@
 ---
 title: "Enterprise DeepSeek Chat API"
 description: "Run DeepSeek large language models on dedicated enterprise GPU servers. Private chat AI infrastructure with full server management."
+hidden: true
+noindex: true
 ---
 
 <CardGroup>
