remove all references to the nsfw content, deepfake, chat api. from dev docs too.
Signed-off-by: Anurag Kanade <75563673+anurag12-webster@users.noreply.github.com>

--- a/enterprise-api/text-to-image/nsfw-image-check.mdx
+++ b/enterprise-api/text-to-image/nsfw-image-check.mdx
@@ -1,6 +1,8 @@
 ---
 title: "NSFW Image Check"
 description: "This endpoint is used to check if an image is NSFW."
+hidden: true
+noindex: true
 ---
 
 
