--- a/general-api/nsfw-prompt-check.mdx
+++ b/general-api/nsfw-prompt-check.mdx
@@ -2,6 +2,8 @@
 title: "NSFW Prompt Check"
 openapi: 'POST /check_nsfw_cp'
 description: 'This endpoint is useful to check if a prompt has CP or NSFW content.'
+hidden: true
+noindex: true
 ---
 
 ## Request
