--- a/general-api/nsfw-image-check.mdx
+++ b/general-api/nsfw-image-check.mdx
@@ -2,6 +2,8 @@
 title: "NSFW Image Check"
 openapi: 'POST /nsfw_image_check'
 description: 'Used to check if an image is NSFW or not.'
+hidden: true
+noindex: true
 ---
 
 ## Request
