--- a/deepfake-api/overview.mdx
+++ b/deepfake-api/overview.mdx
@@ -1,8 +1,6 @@
 ---
-title: "Deepfake API"
-description: "Generate deepfake videos and images with face swapping. Supports single and multiple face swap, video face swap, and specific face targeting."
-hidden: true
-noindex: true
+title: "Face Swap API"
+description: "Generate face swap videos and images with AI-powered face swapping. Supports single and multiple face swap, video face swap, and specific face targeting."
 ---
 
 <Warning>
