change to faceswap

--- a/index-full.mdx
+++ b/index-full.mdx
@@ -85,11 +85,11 @@ Explore our comprehensive suite of AI APIs designed for next-generation applicat
     Transform text and images into 3D models and objects
   </Card>
   <Card
-    title="Deepfake"
+    title="Face Swap"
     icon="mask"
-    href="/deepfake-api/overview"
+    href="/faceswap-api/overview"
   >
-    Generate Deepfake Videos
+    Generate Face Swap Videos
   </Card>
 
 </CardGroup>
